--- a/AssetManagementSystem/AssetManagementSystem/Content/Site.css
+++ b/AssetManagementSystem/AssetManagementSystem/Content/Site.css
@@ -29,3 +29,118 @@ textarea {
         padding: 0;
     }
 }
+
+/*------------LOGIN-----------------------*/
+.header-bar {
+    background-color: #02234e;
+    color:#fff;
+}
+
+.a{
+    color:#fff;
+}
+
+.container{
+    /*width:100%;
+    height:500px;
+    background-color:#fff;
+    padding:2rem 2rem 0 2rem;*/
+}
+
+.login {
+    position: absolute;
+    /*top: 20%;
+    right: 10%;*/
+    max-width: 500px;
+    font-weight: bolder;
+    border-style: none;
+    border-color: inherit;
+    border-radius:2px;
+    right: 4%;
+    top: 30%;
+    height: 311px;
+    width: 400px;
+    background-color: white;
+    padding:10px 10px;
+}
+
+.form-group-default {
+    background-color: white;
+    position: relative;
+    /*border: 1px solid rgba(0, 0, 0, 0.2);
+    border-radius: 2px;*/
+    padding-top: 7px;
+    padding-left: 12px;
+    padding-right: 12px;
+    padding-bottom: 4px;
+    overflow: hidden;
+    color: var(--primary-color);
+    -webkit-transition: background-color 0.2s ease;
+    transition: background-color 0.2s ease;
+}
+
+    .form-group-default > .form-control {
+        border: none;
+        padding: 0;
+        height: 18px;
+        color: grey;
+    }
+
+    .form-group-default.required:after {
+        color: #f55753;
+        content: "*";
+        font-family: arial;
+        font-size: 20px;
+        position: absolute;
+        right: 15px;
+        top: 9px;
+    }
+
+    .form-group-default label {
+        font-size: 1.5rem;
+    }
+
+.login-btn {
+    border: none;
+    background-color: #02234e;
+    font-weight: bold;
+    padding: 4px 18px;
+    color: white;
+    margin:0 auto;
+    
+}
+
+/*---------------ITEM BORROW------------*/
+
+
+.ImageMargin{
+    margin-top: 5px;
+    margin-bottom:5px;
+    
+}
+
+
+/*---------------CLASSROOM RESERVATION------------*/
+.white_slot {
+    width: 15px;
+    border: 1px solid #ccc;
+    background: white;
+}
+
+.green_slot {
+    width: 15px;
+    border: 1px solid rgb(79,176,145);
+    background: rgb(79,176,145);
+}
+
+.blue_slot {
+    width: 15px;
+    border: 1px solid #4384BF;
+    background: #4384BF;
+}
+
+.grey_slot {
+    width: 15px;
+    border: 1px solid #d1dfdf;
+    background: #d1dfdf;
+}
