Added 1. ItemBorrowingDetails 2. LoginHeaderFooter
Increase
1. Size of Nav Bar

Changes
1. ClassroomBookingForm -> ClassroomReservationForm
2. SiteMaster of LoginPage

--- a/AssetManagementSystem/AssetManagementSystem/Content/Site.css
+++ b/AssetManagementSystem/AssetManagementSystem/Content/Site.css
@@ -144,3 +144,10 @@ textarea {
     border: 1px solid #d1dfdf;
     background: #d1dfdf;
 }
+
+/*---------------Row And Column Centered------------*/
+/* centered columns styles */
+justify-content-center {
+    display: flex;
+    justify-content: center;
+}
