--- a/AssetManagementSystem/AssetManagementSystem/LoginHeaderFooter.Master
+++ b/AssetManagementSystem/AssetManagementSystem/LoginHeaderFooter.Master
@@ -55,7 +55,7 @@
         <div class="navbar navbar-inverse navbar-fixed-top" style="background-color: #02234E">
             <div id="login-logo" class="container">
                 <div class="navbar-header">
-                    <a class="navbar-brand" runat="server" href="~/">
+                    <a class="navbar-brand" runat="server" href="Login.aspx">
                         <img src="Images/logo.png" class="auto-style1" />                        
                     </a>
                 </div>
